// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph getPackageGraph fixture: alpha should resolve dependencies correctly 1`] = `
Array [
  "@project-alpha/app",
  "@project-alpha/package-a",
  "@project-alpha/package-b",
]
`;

exports[`graph getPackageGraph fixture: alpha should resolve dependencies correctly 2`] = `
Object {
  "@project-alpha/app": Object {
    "external": Array [],
    "internal": Object {
      "@project-alpha/package-a": "1.0.0",
      "@project-alpha/package-b": "1.0.0",
    },
    "peer": Object {},
    "remote": Object {
      "react": "17.0.2",
    },
  },
  "@project-alpha/package-a": Object {
    "external": Array [],
    "internal": Object {},
    "peer": Object {},
    "remote": Object {
      "dependency-of-a": "1.0.0",
    },
  },
  "@project-alpha/package-b": Object {
    "external": Array [],
    "internal": Object {},
    "peer": Object {},
    "remote": Object {
      "dependency-of-b": "1.0.0",
    },
  },
}
`;

exports[`graph getPackageGraph fixture: beta should resolve dependencies correctly 1`] = `
Array [
  "@project/app",
  "@project/package-a",
  "@project/package-b",
]
`;

exports[`graph getPackageGraph fixture: beta should resolve dependencies correctly 2`] = `
Object {
  "@project/app": Object {
    "external": Array [],
    "internal": Object {
      "@project/package-a": "1.0.0",
    },
    "peer": Object {},
    "remote": Object {},
  },
  "@project/package-a": Object {
    "external": Array [],
    "internal": Object {
      "@project/package-b": "1.0.0",
    },
    "peer": Object {},
    "remote": Object {},
  },
  "@project/package-b": Object {
    "external": Array [],
    "internal": Object {},
    "peer": Object {},
    "remote": Object {
      "another-package": "1.0.0",
    },
  },
}
`;

exports[`graph getPackageGraph fixture: externals should resolve dependencies correctly with provided externals 1`] = `
Array [
  "@project/app",
  "@project/package-a",
  "@project/package-b",
]
`;

exports[`graph getPackageGraph fixture: externals should resolve dependencies correctly with provided externals 2`] = `
Object {
  "@project/app": Object {
    "external": Array [],
    "internal": Object {
      "@project/package-a": "1.0.0",
    },
    "peer": Object {},
    "remote": Object {},
  },
  "@project/package-a": Object {
    "external": Array [],
    "internal": Object {
      "@project/package-b": "1.0.0",
    },
    "peer": Object {},
    "remote": Object {},
  },
  "@project/package-b": Object {
    "external": Array [],
    "internal": Object {},
    "peer": Object {},
    "remote": Object {
      "another-package": "1.0.0",
    },
  },
}
`;

exports[`graph should aggregate dependency resolutions with internals and peer internals correctly 1`] = `
Object {
  "external": Array [],
  "internal": Object {
    "internalPackage": "^2.1.0",
    "internalPackage2": "^1.0.1",
  },
  "peer": Object {
    "internalPackage2": "^1.0.1",
    "uuid": "3.1.0",
  },
  "remote": Object {
    "react": "17.0.2",
    "uuid": "3.1.0",
  },
}
`;

exports[`graph should aggregate dependency resolutions without "includePeers" flag correctly 1`] = `
Object {
  "external": Array [],
  "internal": Object {
    "internalPackage": "^2.1.0",
    "internalPackage2": "^1.0.1",
  },
  "peer": Object {
    "internalPackage2": "^1.0.1",
    "uuid": "3.1.0",
  },
  "remote": Object {
    "react": "17.0.2",
  },
}
`;

exports[`graph should aggregate dependency resolutions without internals correctly 1`] = `
Object {
  "external": Array [],
  "internal": Object {},
  "peer": Object {
    "internalPackage2": "^1.0.1",
    "uuid": "3.1.0",
  },
  "remote": Object {
    "internalPackage": "^2.1.0",
    "internalPackage2": "^1.0.1",
    "react": "17.0.2",
    "uuid": "3.1.0",
  },
}
`;
